# OrlixSystem

./: .clang-tidy  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  compile_commands.json  opencode.jsonc  project.yml  skills-lock.json
.codex/: config.toml  hooks.json
.rulesync/: hooks.json
IXLandHostAdapterTests/: HostBridgeSmokeTests.m  HostTestSupport.c  HostTestSupport.h  PTYHostBridgeTests.m  PTYTestSupport.c  PTYTestSupport.h  RootfsBootstrapTests.m  VFSPathHostBridgeTests.m
IXLandKernel.xcodeproj/: project.pbxproj
IXLandKernelTests/: CgroupContract.c  CgroupTests.m  CredentialTests.m  DevfsContract.c  DevfsTests.m  EpollTests.m  ExecFdContract.c  ExecFdTests.m  ExecSyscallContract.c  FutexTests.m  FutexUAPICompileSmoke.c  KernelBoot.c  KernelBootTests.m  KernelInitTests.m  LinuxKHeadersCompileSmoke.c  LinuxUAPICompileSmoke.c  LinuxUAPITestSupport.c  LinuxUAPITestSupport.h  MLibCConfigureProbeCompileSmoke.c  NamespaceContract.c  NamespaceContract.h  NamespaceTests.m  NativeSyscallContract.c  NativeSyscallContract.h  NativeSyscallTests.m  PTYJobControlContract.c  PTYJobControlContract.h  PTYJobControlTests.m  PTYSessionContract.c  PTYSessionTests.m  PipeContract.c  PipeTests.m  ProcfsNamespaceContract.c  ProcfsNamespaceContract.h  PtraceContract.c  PtraceTests.m  ReadinessContract.c  ReadinessTests.m  RootfsBootstrapTests.m  SeccompContract.c  (+10 more)
IXLandSystem.xcodeproj/: project.pbxproj
IXLandSystemHostBridgeTests/: VFSPathHostBridgeTests.m
IXLandSystemLinuxKernelTests/: CgroupContract.c  CgroupContract.h  CgroupTests.m  CredentialTests.m  DevfsContract.c  DevfsContract.h  DevfsTests.m  EpollContract.c  EpollContract.h  EpollTests.m  ExecFdContract.c  ExecFdTests.m  ExecSyscallContract.c  ExecSyscallTests.m  FcntlContract.c  FcntlTests.m  FutexContract.c  FutexContract.h  FutexTests.m  KernelBoot.c  KernelBootTests.m  KernelInitContract.c  KernelInitTests.m  (+37 more)
tools/clang_tidy_ixland/: CMakeLists.txt  IXLandAbiSurfaceCheck.cpp  IXLandAbiSurfaceCheck.h  IXLandAbstractionLeakageCheck.cpp  IXLandAbstractionLeakageCheck.h  IXLandHostVocabularyCheck.cpp  IXLandHostVocabularyCheck.h  IXLandIncludeBoundaryCheck.cpp  IXLandIncludeBoundaryCheck.h  IXLandLoggingPolicyCheck.cpp  IXLandLoggingPolicyCheck.h  IXLandSourcePolicyCheck.cpp  IXLandSourcePolicyCheck.h  IXLandTestPolicyCheck.cpp  IXLandTestPolicyCheck.h  IXLandTestVocabularyCheck.cpp  IXLandTestVocabularyCheck.h  IXLandTidyModule.cpp  IXLandTypeOwnershipCheck.cpp  IXLandTypeOwnershipCheck.h
tools/clang_tidy_orlix/: CMakeLists.txt  OrlixAbiSurfaceCheck.cpp  OrlixAbstractionLeakageCheck.cpp  OrlixHostVocabularyCheck.cpp  OrlixIncludeBoundaryCheck.cpp  OrlixIncludeBoundaryCheck.h  OrlixSourcePolicyCheck.cpp  OrlixTestPolicyCheck.cpp  OrlixTestPolicyCheck.h
(+1002 files in other folders)
